-Nuevos indicadores para proyectos financieros (PRI, Relacion B/C). -Tipo de Proyecto Social con sus indicadores (VAC). -Actualización del reporte. -Inclusión de unidades de medida (Horas hombre, Journal) solo para Costos. -Eliminación de restricciones de repetición de correo para proponentes (esto evita algunos problemas presentados al registrar un proponente). -Eliminación de leyenda en reporte y vista final de indicadores donde explicaba valores de indicadores. -Agregación de control de errores generales para finalización agraciada de la aplicación ante errores inesperados. -Actualización de diálogos de confirmación (requisito técnico para el punto anterior). -Definición de "Indefinida" al indicador TIR cuando el flujo de caja indefine su valor. -Creacion de objetos para la optimizacion de calculos y carga de datos (indicadores, proyecto)

--- a/UCR.Negotium/Dialogs/RegistrarInversion.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarInversion.xaml
@@ -52,7 +52,7 @@
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="1" >
             <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Inversion.DescripcionRequerimiento}" Name="tbDescInversion"
+                <TextBox Text="{Binding Inversion.Descripcion}" Name="tbDescInversion"
                          TextChanged="tbDescInversion_TextChanged"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
