--- a/UCR.Negotium/Dialogs/IndicadoresFinales.xaml
+++ b/UCR.Negotium/Dialogs/IndicadoresFinales.xaml
@@ -6,93 +6,146 @@
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         WindowStartupLocation="CenterScreen" Style="{StaticResource dialogsStyle}"
-        Title="Indicadores | Negotium v1.0" Height="500" Width="400">
+        Title="Indicadores | Negotium v1.0" Height="350" Width="600">
     <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1.5*"/>
-            <RowDefinition Height="7.5*"/>
-            <RowDefinition Height="1*"/>
-        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="180"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <RichTextBox FontSize="14" BorderThickness="0" Grid.ColumnSpan="2">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text="Se recomienda aceptar su proyecto cuando la Tasa Interna de Retorno (TIR) es mayor a la Tasa de Costo de Capital y a su vez cuando se obtiene un VAN positivo."/>
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
-        <StackPanel Grid.Row="1">
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Tasa de Costo de Capital:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="TIR:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="VAN:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Personas Participantes:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Familias Involucradas:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Beneficiarios Indirectos:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="VAN/Personas Participantes:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="VAN/Familias Involucradas:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="VAN/Beneficiarios Indirectos:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-        </StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,27,0">
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Path=ProyectoSelected.TasaCostoCapital, Mode=TwoWay, StringFormat={}{0:N}}" Name="tbTasaCostoCapital" 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="8.8*"/>
+            <RowDefinition Height="1.2*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="Tasa de Costo de Capital:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="Personas Participantes:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="Familias Involucradas:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="Beneficiarios Indirectos:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Margin="0,0,15,0">
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding Path=ProyectoSelected.TasaCostoCapital, Mode=TwoWay, StringFormat={}{0:N}}" Name="tbTasaCostoCapital" 
                          TextChanged="tbTasaCostoCapital_TextChanged" GotFocus="tbNumeros_GotFocus" LostFocus="tbNumeros_LostFocus"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding TIR}" IsEnabled="False"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding VAN, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Path=ProyectoSelected.PersonasParticipantes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding Path=ProyectoSelected.PersonasParticipantes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
                          x:Name="tbPersonasParticipantes" TextChanged="tbPersonasParticipantes_TextChanged"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Path=ProyectoSelected.FamiliasInvolucradas, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding Path=ProyectoSelected.FamiliasInvolucradas, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
                          x:Name="tbFamiliasInvolucradas" TextChanged="tbFamiliasInvolucradas_TextChanged"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Path=ProyectoSelected.PersonasBeneficiadas, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding Path=ProyectoSelected.PersonasBeneficiadas, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
                          x:Name="tbPersonasBeneficiadas" TextChanged="tbPersonasBeneficiadas_TextChanged"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding VANPersonas, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding VANFamilias, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding VANBeneficiarios, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
-            </Grid>
-        </StackPanel>
+                </Grid>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Column="1" Grid.Row="0" x:Name="indicadoresFinancieros">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Row="1">
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="TIR:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="PRI (En Años):" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="Relación B/C:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="VAN:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="VAN/Personas Participantes:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="VAN/Familias Involucradas:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="VAN/Beneficiarios Indirectos:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,15,0">
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding TIR}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding PRI}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding RelacionBC, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding VAN, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding VANPersonas, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding VANFamilias, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding VANBeneficiarios, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Column="1" Grid.Row="0" x:Name="indicadoresSociales" Visibility="Hidden">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="170"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Row="1">
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="VAC:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="VAC/Personas Participantes:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="VAC/Familias Involucradas:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <Label Content="VAC/Beneficiarios Indirectos:" Style="{StaticResource labelRigth}"/>
+                </Grid>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,15,0">
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding VAC, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding VACPersonas, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding VACFamilias, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+                <Grid Style="{StaticResource gridFormStyle}">
+                    <TextBox Text="{Binding VACBeneficiarios, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False"/>
+                </Grid>
+            </StackPanel>
+        </Grid>
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
             <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
-                     HorizontalAlignment="Left" Margin="70,0,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+                     HorizontalAlignment="Left" Margin="150,0,0,0" Grid.Row="2" VerticalAlignment="Top"/>
 
-            <Button Name="btnCancelar" Content="Cancelar" Width="75"
-                    HorizontalAlignment="Right" Margin="0,0,70,0" Grid.Row="2" VerticalAlignment="Top"
-                    Click="btnCancelar_Click"/>
+            <Button Name="btnCancelar" Content="Cancelar" Click="btnCancelar_Click" Width="75" 
+                    HorizontalAlignment="Right" Margin="0,0,150,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Controls:MetroWindow>
