--- a/UCR.Negotium/Resources/Styles.xaml
+++ b/UCR.Negotium/Resources/Styles.xaml
@@ -180,4 +180,10 @@
         <Setter Property="AcceptsReturn" Value="True"/>
         <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
     </Style>
+
+    <Style x:Key="labelRigth" TargetType="Label">
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    
 </ResourceDictionary>
