--- a/UCR.Negotium/UserControls/ctrl_InformacionGeneral.xaml
+++ b/UCR.Negotium/UserControls/ctrl_InformacionGeneral.xaml
@@ -33,7 +33,8 @@
                             <Label Content="Tipo de Análisis:"/>
                             <ComboBox ItemsSource="{Binding TipoProyectos}" SelectedValuePath="CodTipo"
                                       SelectedValue="{Binding ProyectoSelected.TipoProyecto.CodTipo}"
-                                      Width="235" x:Name="cbTipoAnalisis" Loaded="cbTipoAnalisis_Loaded"/>
+                                      Width="235" x:Name="cbTipoAnalisis" Loaded="cbTipoAnalisis_Loaded"
+                                      SelectionChanged="cbTipoAnalisis_SelectionChanged"/>
                         </StackPanel>
                         <StackPanel Style="{StaticResource verticalPanelFormStyle}">
                             <Label Content="Nombre del Proyecto:"/>
@@ -55,20 +56,22 @@
                         </StackPanel>
                         <StackPanel Style="{StaticResource horizontalPanelFormStyle}">
                             <Label Content="Paga Impuestos:"/>
-                            <CheckBox FlowDirection="LeftToRight" Content="Si"
+                            <CheckBox FlowDirection="LeftToRight" Content="Si" x:Name="cbSiPaga"
                                       IsChecked="{Binding ProyectoSelected.PagaImpuesto}"/>
-                            <CheckBox FlowDirection="LeftToRight" Content="No" Margin="10,0,0,0"
+                            <CheckBox FlowDirection="LeftToRight" Content="No" x:Name="cbNoPaga" Margin="10,0,0,0"
                                       IsChecked="{Binding ProyectoSelected.PagaImpuesto, Converter={conv:InverseBoolConverter}}"/>
                         </StackPanel>
                         <StackPanel Style="{StaticResource horizontalPanelFormStyle}">
                             <Label Content="Porcentaje de Impuestos:"/>
-                            <Controls:NumericUpDown Minimum="0" TextAlignment="Left" Value="{Binding ProyectoSelected.PorcentajeImpuesto}" HasDecimals="True" StringFormat="0.0"/>
+                            <Controls:NumericUpDown Minimum="0" TextAlignment="Left" x:Name="nudPorcentaje"
+                                                    Value="{Binding ProyectoSelected.PorcentajeImpuesto}" 
+                                                    HasDecimals="True" StringFormat="0.0"/>
                         </StackPanel>
                         <StackPanel Style="{StaticResource horizontalPanelFormStyle}">
                             <Label Content="Posee Financiamiento:"/>
-                            <CheckBox FlowDirection="LeftToRight" Content="Si"
+                            <CheckBox FlowDirection="LeftToRight" Content="Si" x:Name="cbSiPoseeFinan"
                                       IsChecked="{Binding ProyectoSelected.ConFinanciamiento}"/>
-                            <CheckBox FlowDirection="LeftToRight" Content="No" Margin="10,0,0,0"
+                            <CheckBox FlowDirection="LeftToRight" Content="No" Margin="10,0,0,0" x:Name="cbNoPoseeFinan"
                                       IsChecked="{Binding ProyectoSelected.ConFinanciamiento, Converter={conv:InverseBoolConverter}}"/>
                         </StackPanel>
                         <StackPanel Style="{StaticResource verticalPanelFormStyle}">
