--- a/UCR.Negotium/Dialogs/RegistrarCosto.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarCosto.xaml
@@ -1,8 +1,9 @@
-﻿<Controls:MetroWindow x:Class="UCR.Negotium.Dialogs.RegistrarCosto"
+﻿<base:DialogWithDataGrid x:Class="UCR.Negotium.Dialogs.RegistrarCosto"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:base="clr-namespace:UCR.Negotium.Extensions"
         xmlns:local="clr-namespace:UCR.Negotium.Dialogs"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen" Style="{StaticResource dialogsStyle}"
@@ -50,16 +51,25 @@
             </Grid>
         </StackPanel>
         <DataGrid Grid.ColumnSpan="2" CanUserSortColumns="False" SelectionUnit="Cell" Name="dgCostosMensual"
-                ItemsSource="{Binding CostoSelected.CostosMensuales, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
+                ItemsSource="{Binding CostoSelected.CostosMensuales, UpdateSourceTrigger=PropertyChanged}" 
                 SelectedItem="{Binding CostoMensualSelected, UpdateSourceTrigger=PropertyChanged}"
                 BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
                 AllowDrop="False" CanUserAddRows="False" CanUserDeleteRows="False" 
-                AutoGenerateColumns="False" Margin="27,165,27,10" Grid.Row="1">
+                AutoGenerateColumns="False" Margin="27,165,27,10" Grid.Row="1"
+                  PreviewMouseRightButtonDown="dgCostosMensual_PreviewMouseRightButtonDown">
             <DataGrid.Style>
                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                     <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                 </Style>
             </DataGrid.Style>
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Style="{StaticResource menuItemValorTemplate}">
+                    </MenuItem>
+                    <MenuItem x:Name="btnAgregarValor" Click="btnAnadirNumero_Click"
+                              Header="Añadir Número" Background="GhostWhite"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
             <DataGrid.Columns>
                 <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Mes}" Header="Mes" Width="4*"/>
                 <DataGridTextColumn Binding="{Binding Path=Cantidad, Mode=TwoWay, StringFormat={}{0:N}}" Header="Cantidad" Width="3*">
@@ -89,4 +99,4 @@
                     HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
-</Controls:MetroWindow>
+</base:DialogWithDataGrid>
