--- a/UCR.Negotium/Dialogs/RegistrarProyeccionVenta.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarProyeccionVenta.xaml
@@ -1,8 +1,9 @@
-﻿<Controls:MetroWindow x:Class="UCR.Negotium.Dialogs.RegistrarProyeccionVenta"
+﻿<base:DialogWithDataGrid x:Class="UCR.Negotium.Dialogs.RegistrarProyeccionVenta"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:base="clr-namespace:UCR.Negotium.Extensions"
         xmlns:local="clr-namespace:UCR.Negotium.Dialogs"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen" Style="{StaticResource dialogsStyle}"
@@ -47,12 +48,20 @@
                 ItemsSource="{Binding ProyeccionSelected.DetallesProyeccionVenta, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
                 BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" AllowDrop="False" 
                 CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                Margin="27,110,27,10" Grid.Row="1">
+                Margin="27,110,27,10" Grid.Row="1" PreviewMouseRightButtonDown="dgDetalleProyeccion_PreviewMouseRightButtonDown">
             <DataGrid.Style>
                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                     <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                 </Style>
             </DataGrid.Style>
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Style="{StaticResource menuItemValorTemplate}">
+                    </MenuItem>
+                    <MenuItem x:Name="btnAgregarValor" Click="btnAgregarValor_Click"
+                              Header="Añadir Número" Background="GhostWhite"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
             <DataGrid.Columns>
                 <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Mes}" Header="Mes" Width="4*"/>
                 <DataGridTextColumn Binding="{Binding Path=Cantidad, Mode=TwoWay, StringFormat={}{0:N}}" Header="Cantidad" Width="3*">
@@ -87,12 +96,20 @@
                 ItemsSource="{Binding ProyeccionSelected.CrecimientoOferta, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
                 BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" AllowDrop="False" 
                 CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                Margin="27,85,27,10">
+                Margin="27,85,27,10" PreviewMouseRightButtonDown="dgDetalleCrecimiento_PreviewMouseRightButtonDown">
                 <DataGrid.Style>
                     <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                         <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                     </Style>
                 </DataGrid.Style>
+                <DataGrid.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Style="{StaticResource menuItemValorTemplate}">
+                        </MenuItem>
+                        <MenuItem x:Name="btnAgregarPorcentaje" Click="btnAgregarPorcentaje_Click"
+                              Header="Añadir Número" Background="GhostWhite"/>
+                    </ContextMenu>
+                </DataGrid.ContextMenu>
                 <DataGrid.Columns>
                     <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=AnoCrecimiento}" Header="Año" Width="4*"/>
                     <DataGridTextColumn Binding="{Binding Path=PorcentajeCrecimiento, Mode=TwoWay, StringFormat={}{0:N}}" Header="Porcentaje (%)" Width="6*">
@@ -114,4 +131,4 @@
                     HorizontalAlignment="Right" Margin="0,15,200,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
-</Controls:MetroWindow>
+</base:DialogWithDataGrid>
