--- a/UCR.Negotium/Dialogs/RegistrarVariacionAnualCostos.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarVariacionAnualCostos.xaml
@@ -1,9 +1,10 @@
-﻿<Controls:MetroWindow x:Class="UCR.Negotium.Dialogs.RegistrarVariacionAnualCostos"
+﻿<base:DialogWithDataGrid x:Class="UCR.Negotium.Dialogs.RegistrarVariacionAnualCostos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UCR.Negotium.Dialogs"
+        xmlns:base="clr-namespace:UCR.Negotium.Extensions"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d" Style="{StaticResource dialogsStyle}" WindowStartupLocation="CenterScreen"
         Title="Variación Anual de Costos | Negotium v1.0" Height="450" Width="400">
@@ -17,12 +18,20 @@
                 ItemsSource="{Binding VariacionCostos, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
                 BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" AllowDrop="False" 
                 CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                Margin="27,10,27,10" Grid.Row="1">
+                Margin="27,10,27,10" Grid.Row="1" PreviewMouseRightButtonDown="dgVariacionAnual_PreviewMouseRightButtonDown">
             <DataGrid.Style>
                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                     <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                 </Style>
             </DataGrid.Style>
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Style="{StaticResource menuItemValorTemplate}">
+                    </MenuItem>
+                    <MenuItem x:Name="btnAgregarPorcentaje" Click="btnAgregarPorcentaje_Click"
+                              Header="Añadir Número" Background="GhostWhite"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
             <DataGrid.Columns>
                 <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Ano}" Header="Año" Width="4*"/>
                 <DataGridTextColumn Binding="{Binding Path=PorcentajeIncremento, Mode=TwoWay, StringFormat={}{0:N}}" Header="Porcentaje (%)" Width="6*">
@@ -43,4 +52,4 @@
                     HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
-</Controls:MetroWindow>
+</base:DialogWithDataGrid>
