--- a/UCR.Negotium/Resources/Styles.xaml
+++ b/UCR.Negotium/Resources/Styles.xaml
@@ -1,4 +1,5 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<ResourceDictionary x:Class="UCR.Negotium.Extensions.ResourceDictionaryEvents"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
@@ -26,6 +27,23 @@
                 <Setter Property="Foreground" Value="Black"/>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="menuItemValorTemplate" TargetType="MenuItem" BasedOn="{StaticResource MetroMenuItem}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="MenuItem">
+                    <Border Padding="5">
+                        <StackPanel>
+                            <Label Content="Agregar Número:" />
+                            <TextBox x:Name="tbAgregarValor" TextChanged="tbAgregarValor_TextChanged"
+                                     GotFocus="tbAgregarValor_GotFocus" LostFocus="tbAgregarValor_LostFocus"
+                                     Text="{Binding ValorACopiar, Mode=TwoWay, StringFormat={}{0:N}}"/>
+                        </StackPanel>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="menuTabControl" TargetType="{x:Type TabControl}">
