--- a/UCR.Negotium/Dialogs/RegistrarProyeccionVenta.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarProyeccionVenta.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:UCR.Negotium.Dialogs"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen" Style="{StaticResource dialogsStyle}"
-        Title="Proyección Oferta de Producto o Servicio | Negotium v1.0" Height="580" Width="700">
+        Title="Proyección Oferta de Producto o Servicio | Negotium v1.0" Height="620" Width="700">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.1*"/>
@@ -24,6 +24,9 @@
                 <Label Content="Nombre del Producto:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
+                <Label Content="Año Inicial del Producto:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            </Grid>
+            <Grid Style="{StaticResource gridFormStyle}">
                 <Label Content="Unidad de Medida:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             </Grid>
         </StackPanel>
@@ -33,11 +36,15 @@
                          TextChanged="tbNombreArticulo_TextChanged"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
+                <ComboBox ItemsSource="{Binding AnosDisponibles}"
+                          SelectedValue="{Binding ProyeccionSelected.AnoArticulo}" />
+            </Grid>
+            <Grid Style="{StaticResource gridFormStyle}">
                 <ComboBox ItemsSource="{Binding UnidadesMedida}" SelectedValuePath="CodUnidad"
-                        SelectedValue="{Binding ProyeccionSelected.UnidadMedida.CodUnidad}" />
+                          SelectedValue="{Binding ProyeccionSelected.UnidadMedida.CodUnidad}" />
             </Grid>
         </StackPanel>
-        <RichTextBox FontSize="12" BorderThickness="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="27,85,27,10">
+        <RichTextBox FontSize="12" BorderThickness="0" Grid.ColumnSpan="2" Grid.Row="1" Margin="27,125,27,10">
             <FlowDocument>
                 <Paragraph>
                     <Run Text="Registro de Estimación de ventas del Año 1"/>
@@ -48,7 +55,7 @@
                 ItemsSource="{Binding ProyeccionSelected.DetallesProyeccionVenta, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
                 BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" AllowDrop="False" 
                 CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
-                Margin="27,110,27,10" Grid.Row="1" PreviewMouseRightButtonDown="dgDetalleProyeccion_PreviewMouseRightButtonDown">
+                Margin="27,150,27,10" Grid.Row="1" PreviewMouseRightButtonDown="dgDetalleProyeccion_PreviewMouseRightButtonDown">
             <DataGrid.Style>
                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                     <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
