--- a/UCR.Negotium/Dialogs/RegistrarProyeccionVenta.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarProyeccionVenta.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:UCR.Negotium.Dialogs"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen" Style="{StaticResource dialogsStyle}"
-        Title="Proyección Oferta de Producto o Servicio | Negotium v1.0" Height="620" Width="700">
+        Title="Proyección Oferta de Producto o Servicio | Negotium v1.2" Height="620" Width="700">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.1*"/>
@@ -36,8 +36,9 @@
                          TextChanged="tbNombreArticulo_TextChanged"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <ComboBox ItemsSource="{Binding AnosDisponibles}"
-                          SelectedValue="{Binding ProyeccionSelected.AnoArticulo}" />
+                <ComboBox ItemsSource="{Binding AnosDisponibles}" Name="cbAnosDisponibles"
+                          SelectedValue="{Binding ProyeccionSelected.AnoArticulo}" 
+                          SelectionChanged="cbAnosDisponibles_SelectionChanged"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <ComboBox ItemsSource="{Binding UnidadesMedida}" SelectedValuePath="CodUnidad"
