--- a/UCR.Negotium/RegistrarProyectoWindow.xaml
+++ b/UCR.Negotium/RegistrarProyectoWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d" GlowBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="2" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" Closing="MetroWindow_Closing"
-        Title="Registrar Proyecto | Negotium v1.0" Height="680" Width="1360">
+        Title="Registrar Proyecto | Negotium v1.2" Height="680" Width="1360">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="625*"/>
@@ -82,24 +82,28 @@
                                 <Label Content="TIR: " Margin="40,0,0,0" FontSize="14" FontWeight="Bold" VerticalAlignment="Top"/>
                                 <TextBox Width="100" IsEnabled="False" Height="20" VerticalAlignment="Top"
                                          Text="{Binding TIR, UpdateSourceTrigger=PropertyChanged}"/>
-                                <Label Content="PRI (En Años): " Margin="40,0,0,0" FontSize="14" FontWeight="Bold" VerticalAlignment="Top"/>
-                                <TextBox IsEnabled="False" Margin="0,0,0,50" Width="100" Height="20" VerticalAlignment="Top"
-                                         Text="{Binding PRI, UpdateSourceTrigger=PropertyChanged}"/>
                                 <Label Content="Relación B/C: " Margin="40,0,0,0" FontSize="14" FontWeight="Bold" VerticalAlignment="Top"/>
-                                <TextBox IsEnabled="False" Margin="0,0,0,50" Width="100" Height="20" VerticalAlignment="Top"
+                                <TextBox IsEnabled="False" Margin="0,0,0,50" Width="70" Height="20" VerticalAlignment="Top"
                                          Text="{Binding RelacionBC, UpdateSourceTrigger=PropertyChanged}"/>
+                                <Label Content="Relación B/C (Con Inversión Inicial): " Margin="40,0,0,0" FontSize="14" FontWeight="Bold" VerticalAlignment="Top"/>
+                                <TextBox IsEnabled="False" Margin="0,0,0,50" Width="70" Height="20" VerticalAlignment="Top"
+                                         Text="{Binding RelacionBCInversionInicial, UpdateSourceTrigger=PropertyChanged}"/>
                                 <Label Content="VAN: " Margin="40,0,0,0" FontSize="14" FontWeight="Bold" VerticalAlignment="Top"/>
                                 <TextBox IsEnabled="False" Margin="0,0,0,50" Width="100" Height="20" VerticalAlignment="Top"
                                          Text="{Binding VAN, UpdateSourceTrigger=PropertyChanged}"/>
-                                <Grid Margin="-1130,0,0,5" VerticalAlignment="Bottom">
+                                <StackPanel Margin="-1210,0,0,5"  Style="{StaticResource horizontalPanelFormStyle}" VerticalAlignment="Bottom">
+                                    <Label Content="PRI (En Años): " Margin="68,7,0,0" FontSize="14" FontWeight="Bold" HorizontalAlignment="Left"/>
+                                    <TextBox IsEnabled="False" Margin="0,7,0,0" Width="100" Height="20" HorizontalAlignment="Left"
+                                         Text="{Binding PRI, UpdateSourceTrigger=PropertyChanged}"/>
+
                                     <iconPacks:PackIconModern Width="16" Height="16" Kind="Box" Foreground="Teal"
-                                                              Margin="8,7,120,0" HorizontalAlignment="Left"/>
-                                    <Label Margin="28,0,0,0" HorizontalAlignment="Left">
+                                                              Margin="44,14,0,0" HorizontalAlignment="Left"/>
+                                    <Label Margin="2,7,0,0" HorizontalAlignment="Left">
                                         <Hyperlink Name="lbDetalleIndicadores" Click="lbDetalleIndicadores_Click">
                                             Detalle de Indicadores
                                         </Hyperlink>
                                     </Label>
-                                </Grid>
+                                </StackPanel>
                             </StackPanel>
                             <StackPanel Grid.Row="1" Style="{StaticResource horizontalPanelFormStyle}" VerticalAlignment="Top" Name="spIndicadoresSocial">
                                 <Label Content="Tasa de Costo de Capital: " Margin="30,0,0,0" FontSize="14" FontWeight="Bold" VerticalAlignment="Top"/>
