--- a/UCR.Negotium/Resources/Styles.xaml
+++ b/UCR.Negotium/Resources/Styles.xaml
@@ -193,7 +193,7 @@
         <Setter Property="Margin" Value="0,25,0,0"/>
     </Style>
 
-    <Style x:Key="multilineTextBox" TargetType="TextBox">
+    <Style x:Key="multilineTextBox" TargetType="TextBox" BasedOn="{StaticResource MetroTextBox}">
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="AcceptsReturn" Value="True"/>
         <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
